# license-page-generator

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
license_page_generator/: gen_markdown.py  github_repo.py  http_cache.py  license_extractor.py  main.py  npm.py
tests/: test_github_repo.py  test_license_extractor.py  test_npm.py
