[tool.poetry]
name = "node-pkg-oss-license-page-generator"
version = "0.1.0"
description = ""
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
requests = "^2.26.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
